--- a/index.html
+++ b/index.html
@@ -276,6 +276,9 @@
                 const photos = event.target.result;
                 container.innerHTML = '';
                 photos.forEach(photoData => {
+
+                    const photoId = photoData.id;
+
                     const img = document.createElement('img');
                     const div = document.createElement('div');
 
@@ -301,8 +304,10 @@
 
                     deleteButton.addEventListener('click', () => {
                         if (confirm("Are you sure you want to delete this photo?")) {
-                            // Code to delete the data goes here
-                            console.log("Photo deleted successfully.");
+
+                            // Delete from database
+                            deleteItem(photoId);
+
                         } else {
                             console.log("Photo deletion canceled.");
                         }
@@ -315,6 +320,35 @@
                 console.error("Load error:", event.target.errorCode);
             };
         }
+
+        function deleteItem(id) {
+            let request = indexedDB.open("PlantPhotos", 1);
+
+            request.onsuccess = function (event) {
+                let db = event.target.result;
+
+                let transaction = db.transaction(["photos"], "readwrite");
+                let objectStore = transaction.objectStore("photos");
+                let deleteRequest = objectStore.delete(id);
+
+                deleteRequest.onsuccess = function () {
+                    console.log("Deleted", id);
+                };
+
+                transaction.oncomplete = function () {
+                    loadPhotos();
+                };
+
+                transaction.onerror = function (event) {
+                    console.error("Transaction error:", event.target.error);
+                };
+            };
+
+            request.onerror = function (event) {
+                console.error("Database open error:", event.target.error);
+            };
+        }
+
 
         function checkBatteryStatus() {
             navigator.getBattery().then(battery => {
