--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ async function analyzeFlower() {
     const accessToken = '';  // Access Token (if needed)
 
     // Image data (Base64 encoded or URL)
-    const flowerData = [photo.src || 'https://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Flower_jtca001.jpg/1280px-Flower_jtca001.jpg'];
+    const flowerData = "images": ["data:image/jpeg;base64,/9j/4AAQSkZJRgABAQEAAAAAAAD/"]
 
     // Request body for identification
     const requestBody = {
