--- a/index.html
+++ b/index.html
@@ -450,16 +450,23 @@ async function analyzeFlower() {
 }
 
 // Helper function to convert image URL to Base64
+// Helper function to convert image URL to Base64 without the prefix
 async function convertToBase64(imageUrl) {
     const response = await fetch(imageUrl);
     const blob = await response.blob();
     const reader = new FileReader();
+    
     return new Promise((resolve, reject) => {
-        reader.onloadend = () => resolve(reader.result);  // Resolve with the Base64 string
+        reader.onloadend = () => {
+            // Remove the "data:image/jpeg;base64," part from the result
+            const base64String = reader.result.split(',')[1];  // Get only the Base64 data part
+            resolve(base64String);  // Resolve with the pure Base64 string
+        };
         reader.onerror = reject;  // Reject on error
         reader.readAsDataURL(blob);  // Start reading the image as a Base64 string
     });
 }
+
 
 
         analyzeButton.addEventListener('click', analyzeFlower);
